Quick fix for category colors

--- a/_sass/2-components/_cards.sass
+++ b/_sass/2-components/_cards.sass
@@ -234,7 +234,7 @@ $widths: 5,10,15,20,25,30,35,40,45,50,100
 
     &__header
       position: relative
-      height: 200px
+      height: 250px
       background-size: cover
       border-top-left-radius: $card-border-radius
       border-top-right-radius: $card-border-radius
@@ -246,7 +246,7 @@ $widths: 5,10,15,20,25,30,35,40,45,50,100
       color: $white
       line-height: 1
       font-weight: bold
-      padding: .5rem 1rem
+      padding: .5em 1em
       font-size: 1.6rem
       letter-spacing: .05em
       box-shadow: $hover-box-shadow
@@ -256,13 +256,12 @@ $widths: 5,10,15,20,25,30,35,40,45,50,100
       &::before
         content: ''
         position: absolute
-        left: 0
-        bottom: -1rem
+        left: -1px
+        bottom: calc(-1rem - 1px)
         width: 0
         height: 0
         border-style: solid
         border-width: 0 1rem 1rem 0
-        // border-color: transparent $card-ribbon-background-color-shade transparent transparent
 
     &__body
       padding: 2rem
