Center loading spinner

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -11,7 +11,7 @@
         <div class="post-container" id="posts">
           {{ content }}
         </div>
-        <div id="loading" data-next="/api{{ page.permalink }}/page-1.json">
+        <div class="load-spinner" id="loading" data-next="/api{{ page.permalink }}/page-1.json">
           <img src="/assets/img/loading.svg" alt="Loading…" />
         </div>
       </div>
