--- a/_sass/1-config/_typography.sass
+++ b/_sass/1-config/_typography.sass
@@ -41,6 +41,7 @@ a
   display: inline-block
   text-decoration: none
   color: $link-font-color
+  outline: none
 
   &:hover
     color: darken($link-font-color, 10%)
