--- a/_sass/1-config/_typography.sass
+++ b/_sass/1-config/_typography.sass
@@ -1,7 +1,7 @@
 html
   font-size: 62.5%
 
-body
+body, #{$all-text-inputs}, #{$all-buttons}
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
   font-family: $base-font-family
