Add new variables form forms

--- a/_sass/1-config/_variables.sass
+++ b/_sass/1-config/_variables.sass
@@ -86,3 +86,6 @@ $cat-methods-and-tools-hov:               darken($cat-methods-and-tools, 10%)
 $cat-on-the-job-hov:                      darken($cat-on-the-job, 10%)
 $cat-tech-stories-hov:                    darken($cat-tech-stories, 10%)
 $cat-techcomm-and-socialmedia-hov:        darken($cat-techcomm-and-socialmedia, 10%)
+
+// Forms and cta
+$input-border-color:                      #e0dfd2
