--- a/_sass/2-components/_header.sass
+++ b/_sass/2-components/_header.sass
@@ -37,7 +37,7 @@
 
   h1
     font-size: 6.4rem
-    margin: 2rem 0
+    margin: 0 0 2rem
 
 .page
   .header
@@ -48,6 +48,11 @@
 
     h1
       font-size: 5.2rem
+      line-height: 1
+
+      +grid-media($grid-small)
+        line-height: 1.3
+        font-size: 5.2rem
 
 .devjobs
 
