Make signup form work and add minor styles

--- a/_sass/2-components/_forms.sass
+++ b/_sass/2-components/_forms.sass
@@ -44,7 +44,7 @@
     outline: 0
     border: 0
     border-radius: 4px
-    padding: 6px 12px
+    padding: 9px 12px 7px
     margin: 0
     transition: background-color 0.125s ease-in
     font-weight: bold
