--- a/_includes/components/tags.html
+++ b/_includes/components/tags.html
@@ -4,7 +4,7 @@
     <div class="tags-wrapper">
       {% for tag in include.tags %}
         <div class="tags__tag">
-          <a href="/blog/search.html?query={{ tag }}">{{ tag }}</a>
+          <a href="/blog/search/?query={{ tag }}">{{ tag }}</a>
         </div>
       {% endfor %}
     </div>
