--- a/_includes/sections/navbar.html
+++ b/_includes/sections/navbar.html
@@ -11,7 +11,7 @@
         {% if url[1] == 'blog' %}
           <li class="navigation__item">
             <div class="navigation__search-button"></div>
-            <form action="/blog/search.html" method="get" class="navigation__search-form">
+            <form action="/blog/search/" method="get" class="navigation__search-form">
               <input type="text" class="navigation__search-input" placeholder="Search for tags, keywords, etc." name="query" id="search-box">
             </form>
           </li>
