--- a/_includes/sections/footer.html
+++ b/_includes/sections/footer.html
@@ -29,15 +29,15 @@
       <nav class="navigation">
         <ul class="navigation__list">
           <li class="navigation__item">
-            <a href="{{ site.url }}/api" class="navigation__link">Docs</a>
+            <a href="/apps/" class="navigation__link">Docs</a>
           </li>
           <li class="navigation__item  navigation__item--spacer">&middot;</li>
           <li class="navigation__item">
-            <a href="{{ site.url }}/blog" class="navigation__link">Blog</a>
+            <a href="/blog/" class="navigation__link">Blog</a>
           </li>
           <li class="navigation__item  navigation__item--spacer">&middot;</li>
           <li class="navigation__item">
-            <a href="{{ site.url }}/devjobs" class="navigation__link">Jobs</a>
+            <a href="/devjobs/" class="navigation__link">Jobs</a>
           </li>
         </ul>
       </nav>
