Add harm to contact section

--- a/_sass/3-pages/_devjobs.sass
+++ b/_sass/3-pages/_devjobs.sass
@@ -193,6 +193,12 @@
   .contact
     text-align: center
 
+    +grid-media($grid-medium)
+      background-image: url(/assets/img/pages/jobs/harm-behrens.png)
+      background-position: bottom right
+      background-repeat: no-repeat
+      background-size: 15rem
+
     &__container
       margin-top: 4rem
       display: flex
