--- a/_includes/sections/navbar.html
+++ b/_includes/sections/navbar.html
@@ -17,7 +17,7 @@
           </li>
         {% endif %}
         <li class="navigation__item">
-          <a href="/" class="navigation__link  {% active_menu docs %}">Docs</a>
+          <a href="/apps/" class="navigation__link  {% active_menu docs %}">Docs</a>
         </li>
         <li class="navigation__item">
           <a href="/blog/" class="navigation__link  {% active_menu blog %}">Blog</a>
