Fix date library

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -17,6 +17,6 @@
     </main>
     {% include sections/footer.html %}
     <script src="/assets/js/endless-scroll.js"></script>
-    <script src="/assets/js/date-format.js"></script>
+    <script src="/assets/js/date.js"></script>
   </body>
 </html>
