--- a/_sass/1-config/_typography.sass
+++ b/_sass/1-config/_typography.sass
@@ -14,7 +14,10 @@ h1, h2, h3, h4, h5, h6
   line-height: $display-line-height
 
 h1
-  font-size: 4.2rem
+  font-size: 3.2rem
+
+  +grid-media($grid-medium)
+    font-size: 4.2rem
 
 h2
   font-size: 3.2rem
