Add home entry to mobile navbar

--- a/_includes/sections/navbar.html
+++ b/_includes/sections/navbar.html
@@ -16,6 +16,9 @@
             </form>
           </li>
         {% endif %}
+        <li class="navigation__item  navigation__item--hidden">
+          <a href="/" class="navigation__link">Home</a>
+        </li>
         <li class="navigation__item">
           <a href="/apps/" class="navigation__link  {% active_menu docs %}">Docs</a>
         </li>
