--- a/_sass/2-components/_navbar.sass
+++ b/_sass/2-components/_navbar.sass
@@ -61,6 +61,9 @@
         &:not(:last-child)
           margin-right: 2rem
 
+        &--hidden
+          display: none
+
     &__link
       color: $base-font-color-white
       display: block
