--- a/_sass/3-pages/_index.sass
+++ b/_sass/3-pages/_index.sass
@@ -13,7 +13,7 @@
     margin-top: $card-margin-mobile
     box-sizing: border-box
 
-    +grid-media($grid-small)
+    +grid-media($grid-medium)
       margin-top: $card-margin-desktop
       display: flex
 
@@ -28,10 +28,10 @@
     &:last-child
       margin-top: $card-margin-mobile
 
-      +grid-media($grid-small)
+      +grid-media($grid-medium)
         margin-top: 0
 
-    +grid-media($grid-small)
+    +grid-media($grid-medium)
       +grid-column(6, $tile-grid)
 
     &__header
