Make footer year dynamic

--- a/_includes/sections/footer.html
+++ b/_includes/sections/footer.html
@@ -45,7 +45,7 @@
 
     <div class="row  row--impress">
       <ul class="list">
-        <li class="list__item">&#169; 2017 ePages GmbH</li>
+        <li class="list__item">&#169; {{ 'now' | date: "%Y" }} ePages GmbH</li>
         <li class="list__item  list__item--spacer">&middot;</li>
         <li class="list__item">Pilatuspool 2</li>
         <li class="list__item  list__item--spacer">&middot;</li>
