Make social sharing buttons available on the side from 993px on

--- a/_sass/2-components/_content.sass
+++ b/_sass/2-components/_content.sass
@@ -9,7 +9,8 @@ html
     margin-top: 3rem
     margin-bottom: 3rem
 
-    +grid-media($grid-medium)
+    +grid-media($grid-large)
+      width: 80%
       margin-top: 6rem
       margin-bottom: 6rem
 
