--- a/_sass/2-components/_post-share.sass
+++ b/_sass/2-components/_post-share.sass
@@ -3,7 +3,7 @@
   margin-bottom: $card-margin-desktop
   margin-top: 4rem
 
-  +grid-media($grid-max)
+  +grid-media($grid-large)
     text-align: left
     margin: 0
     position: fixed
@@ -18,7 +18,7 @@
     &:not(:last-child)
       margin-right: 1rem
 
-    +grid-media($grid-max)
+    +grid-media($grid-large)
       display: flex
 
       &:not(:last-child)
