--- a/_sass/2-components/_cards.sass
+++ b/_sass/2-components/_cards.sass
@@ -343,6 +343,7 @@ $widths: 5,10,15,20,25,30,35,40,45,50,100
     &__title
       color: $gray-dark
       padding-bottom: 3.6rem
+      font-size: 2rem
 
     &__footer
       display: flex
