Change colors of code highlighter

--- a/_sass/2-components/_cards.sass
+++ b/_sass/2-components/_cards.sass
@@ -66,11 +66,11 @@ $widths: 5,10,15,20,25,30,35,40,45,50,100
 
       +grid-media($grid-medium)
         padding: 2rem $card-margin-desktop
-      
+
     code.highlighter-rouge
       font-family: $code-font-family
-      background: lighten($beyond-blue, 70%)
-      color: lighten($beyond-blue, 10%)
+      background: rgba(27,31,35,0.05)
+      color: $base-font-color
       border-radius: $base-border-radius
       padding: 0 .3rem
       font-size: 1.6rem
