--- a/_sass/1-config/_highlighter.scss
+++ b/_sass/1-config/_highlighter.scss
@@ -1,10 +1,10 @@
 .highlight {
-  background-color: #f8f8f8;
-  table td { 
-    padding: 5px; 
+  background-color: #f6f8fa;
+  table td {
+    padding: 5px;
   }
   table pre {
-     margin: 0; 
+     margin: 0;
   }
   .cm {
     color: #999988;
