--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,4 +17,18 @@
   <link rel="stylesheet" href="/assets/css/main.css" />
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+  <!-- Google Analytics -->
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    {% if page.layout == 'blog' %}ga('create', 'UA-71308214-2', 'auto');{% endif %}
+    {% if page.layout == 'devjobs' %}ga('create', 'UA-71308214-3', 'auto');{% endif %}
+    ga('send', 'pageview');
+  </script>
+  <!-- End Google Analytics -->
+
 </head>
