--- a/_includes/components/load-spinner.html
+++ b/_includes/components/load-spinner.html
@@ -1,3 +1,7 @@
 <div class="load-spinner" {% if include.permalink %}id="loading" data-next="/api{{ include.permalink }}/page-1.json"{% endif %}>
-  <img src="/assets/img/loading.svg" alt="Loading…" />
+  <div class="spinner">
+    <div class="bounce1"></div>
+    <div class="bounce2"></div>
+    <div class="bounce3"></div>
+  </div>
 </div>
