Configure new spinner variables

--- a/_sass/1-config/_variables.sass
+++ b/_sass/1-config/_variables.sass
@@ -66,6 +66,10 @@ $pagination-disabled-color:               $base-font-color-light
 $pagination-selected-bg:                  $beyond-green
 $pagination-selected-color:               $white
 
+// Spinner
+$spiner-size:                             50px
+$spiner-color:                            $beyond-green
+
 // Categories
 $cat-all-categories:                      #4eb7a8
 $cat-api-experience:                      #c1b31a
