Refactor index page and exlude js

--- a/_sass/2-components/_forms.sass
+++ b/_sass/2-components/_forms.sass
@@ -54,6 +54,7 @@
     &:hover
       color: $white
 
+    &--beyond,
     &--green
       background-color: $beyond-green
       box-shadow: 0 2px 0 darken($beyond-green, 10%)
@@ -61,6 +62,7 @@
       &:hover
         background-color: darken($beyond-green, 5%)
 
+    &--now,
     &--blue
       background-color: lighten($beyond-blue, 5%)
       box-shadow: 0 2px 0 darken(lighten($beyond-blue, 5%), 10%)
