Add scroll up arrow to blog overview and blog posts

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -14,9 +14,11 @@
         {% include components/load-spinner.html
                    permalink=page.permalink %}
       </div>
+      {% include components/arrow-up.html %}
     </main>
     {% include sections/footer.html %}
     <script src="/assets/js/endless-scroll.js"></script>
     <script src="/assets/js/date.js"></script>
+    <script src="/assets/js/scroll-top.js"></script>
   </body>
 </html>
