--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,11 +14,13 @@
         </div>
         {% include components/cross-reading.html %}
       </div>
+      {% include components/arrow-up.html %}
     </main>
     {% include sections/footer.html %}
     <script src="/assets/js/lightbox.min.js"></script>
     <script src="/assets/js/posts.js"></script>
     <script src="/assets/js/progressbar.js"></script>
+    <script src="/assets/js/scroll-top.js"></script>
     <link rel="stylesheet" href="/assets/css/lightbox.css" />
   </body>
 </html>
