--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
 
   <link rel="icon" type="image/png" href="/assets/img/favicon.ico" sizes="32x32">
 
-  <title>ePages | {{ page.title }}</title>
+  <title>{% if page.permalink == '/' %}{{ site.title }}{% else %}{{ page.title }} | {{ site.title }}{% endif %}</title>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,400i,700,700i">
 
