Remove a tag from html

--- a/_sass/2-components/_scroll-top.sass
+++ b/_sass/2-components/_scroll-top.sass
@@ -1,4 +1,4 @@
-.arrow-up a
+.arrow-up
   display: none
   width: 60px
   height: 60px
@@ -10,3 +10,4 @@
   position: fixed
   bottom: 1rem
   right: 1rem
+  cursor: pointer
