Make adjustments to scrollup button

--- a/_sass/2-components/_scroll-top.sass
+++ b/_sass/2-components/_scroll-top.sass
@@ -11,3 +11,7 @@
   bottom: 1rem
   right: 1rem
   cursor: pointer
+
+  &:hover
+    background-color: rgba(150,150,150,.15)
+    transition: $base-transition
