Hide and show tag section automatically

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,6 +11,7 @@
         <div class="card  card--markdown">
           {{ content }}
           {% include components/post-share.html %}
+          {% include components/tags.html %}
         </div>
         {% include components/cross-reading.html %}
       </div>
