--- a/_includes/components/tags.html
+++ b/_includes/components/tags.html
@@ -1,8 +1,9 @@
-{% if include.tags %}
+{% assign tags = page.tags | strip %}
+{% if tags != '[]' %}
   <div class="tags">
     <hr>
     <div class="tags-wrapper">
-      {% for tag in include.tags %}
+      {% for tag in page.tags %}
         <div class="tags__tag">
           <a href="/blog/search/?query={{ tag }}">{{ tag }}</a>
         </div>
