Add comment for explanation

--- a/_includes/components/tags.html
+++ b/_includes/components/tags.html
@@ -1,3 +1,6 @@
+{% comment %}
+  Due to liquid limitation this solution checks whether tags are empty or not
+{% endcomment %}
 {% assign tags = page.tags | strip %}
 {% if tags != '[]' %}
   <div class="tags">
