Remove not used classes

--- a/_sass/2-components/_forms.sass
+++ b/_sass/2-components/_forms.sass
@@ -54,16 +54,14 @@
     &:hover
       color: $white
 
-    &--beyond,
-    &--green
+    &--beyond
       background-color: $beyond-green
       box-shadow: 0 2px 0 darken($beyond-green, 10%)
 
       &:hover
         background-color: darken($beyond-green, 5%)
 
-    &--now,
-    &--blue
+    &--now
       background-color: lighten($beyond-blue, 5%)
       box-shadow: 0 2px 0 darken(lighten($beyond-blue, 5%), 10%)
 
