Hide share buttons when overlapping header or footer

--- a/_includes/components/post-share.html
+++ b/_includes/components/post-share.html
@@ -1,4 +1,4 @@
-<div class="share-page">
+<div class="post-share">
   <a href="https://twitter.com/intent/tweet?text={{ page.title }}&amp;url={{ site.url }}{{ page.url }}&amp;via={{ site.twitter_username }}&amp;related={{ site.twitter_username }}" rel="nofollow" target="_blank" title="Share on Twitter">
     <img src="/assets/img/icons/twitter_color.svg" alt="Twitter Icon" class="icon-share">
   </a>
