--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,6 +19,9 @@
     <script src="/assets/js/lightbox.min.js"></script>
     <script src="/assets/js/posts.js"></script>
     <script src="/assets/js/progressbar.js"></script>
+    <!-- <script src="/assets/js/jquery-scrolltofixed-min.js"></script> -->
+    <script src="/assets/js/jquery.overlaps.js"></script>
+    <script src="/assets/js/post-share.js"></script>
     <link rel="stylesheet" href="/assets/css/lightbox.css" />
   </body>
 </html>
