--- a/_sass/2-components/_post-share.sass
+++ b/_sass/2-components/_post-share.sass
@@ -1,7 +1,8 @@
 .post-share
-  text-align: center
   margin-bottom: $card-margin-desktop
   margin-top: 4rem
+  display: flex
+  justify-content: center
 
   +grid-media($grid-large)
     opacity: 0
