--- a/_sass/2-components/_header.sass
+++ b/_sass/2-components/_header.sass
@@ -51,12 +51,12 @@
 .post
 
     h1
-      font-size: 5.2rem
-      line-height: 1
+      font-size: 3.4rem
+      line-height: 1.1
 
-      +grid-media($grid-small)
-        line-height: 1.3
+      +grid-media($grid-medium)
         font-size: 5.2rem
+        line-height: 1.3
 
 .devjobs
 
