Add box-shadow and border to header and footer just like cards

--- a/_sass/2-components/_footer.sass
+++ b/_sass/2-components/_footer.sass
@@ -4,6 +4,8 @@
   background-position: center center
   display: flex
   padding: 6rem 0
+  border-top: $base-border
+  box-shadow: $negative-box-shadow
 
   &-wrapper
     width: 90%
@@ -97,3 +99,5 @@
     background-image: url(/assets/img/pages/jobs/footer-devjobs.jpg)
     background-size: cover
     background-position:  center
+    border-top: none
+    box-shadow: none
