--- a/_sass/2-components/_header.sass
+++ b/_sass/2-components/_header.sass
@@ -8,6 +8,7 @@
   box-shadow: $base-box-shadow
   padding-top: $navbar-height
   box-sizing: border-box
+  border-bottom: $base-border
 
   &-wrapper
     width: 90%
@@ -62,6 +63,8 @@
 
   .header
     height: 600px
+    border-bottom: none
+    box-shadow: none
 
     .header-wrapper
       flex-direction: column
