--- a/_sass/1-config/_variables.sass
+++ b/_sass/1-config/_variables.sass
@@ -35,6 +35,7 @@ $base-border:                             1px solid #e1e1e1
 $base-border-radius:                      4px
 
 $base-box-shadow:                         1px 1px 2px rgba(0,37,55,.1)
+$negative-box-shadow:                     -1px -1px 2px rgba(0,37,55,.1)
 $hover-box-shadow:                        3px 3px 2px rgba(0,37,55,.1)
 $base-text-shadow:                        0 1px 3px rgba(50,50,50,.4)
 
