--- a/_sass/2-components/_header.sass
+++ b/_sass/2-components/_header.sass
@@ -9,15 +9,16 @@
   padding-top: $navbar-height
   box-sizing: border-box
   border-bottom: $base-border
+  position: relative
 
   &-overlay
-    position: fixed
+    position: absolute
     top: 0
     left: 0
     right: 0
     z-index: 1
     display: block
-    height: 400px
+    height: 100%
     width: 100%
     background-color: rgba(0,0,0,.5)
 
