Refactor devjobs page

--- a/_includes/components/index-card.html
+++ b/_includes/components/index-card.html
@@ -13,7 +13,7 @@
 
     <p><a href="{{ include.signup }}" target="{{ include.signup_target }}">Sign up</a> for an account</p>
 
-    <a href="{{ include.docs }}" class="form__cta  form__cta--{{ include.class }}  tile__cta" target="{{ include.docs_target }}">{{ include.cta }}</a>
+    <a href="{{ include.docs }}" class="cta  cta--{{ include.class }}  cta--absolute" target="{{ include.docs_target }}">{{ include.cta }}</a>
   </div>
   {% if include.flag %}
     <div class="tile__flag">{{ include.flag }}</div>
