--- a/_includes/components/signup-form.html
+++ b/_includes/components/signup-form.html
@@ -36,7 +36,7 @@
       <input type="hidden" name="language" id="language" value="en" />
 
       <div class="form__cta-container">
-        <button class="form__cta  form__cta--beyond" type="submit">Get free test shop</button>
+        <button class="cta  cta--beyond" type="submit">Get free test shop</button>
       </div>
     </form>
   </div>
