--- a/_sass/3-pages/_devjobs.sass
+++ b/_sass/3-pages/_devjobs.sass
@@ -113,6 +113,11 @@
       .fa
         margin-right: 2rem
         font-size: 2.5rem
+        width: 3rem
+        text-align: center
+
+        &-comment
+          margin-right: 2.7rem
 
       &:not(:last-child)
         margin-bottom: 2rem
