--- a/_sass/2-components/_post-share.sass
+++ b/_sass/2-components/_post-share.sass
@@ -3,6 +3,7 @@
   margin-top: 4rem
   display: flex
   justify-content: center
+  z-index: 99
 
   +grid-media($grid-large)
     opacity: 0
@@ -11,10 +12,16 @@
     margin: 0
     padding: 3rem 0
     position: fixed
-    left: 2rem
+    left: .5rem
     top: 50%
     transform: translateY(-50%)
     flex-direction: column
+
+  +grid-media($grid-huge)
+    left: 1rem
+
+  +grid-media($grid-max)
+    left: 2rem
 
   a
     display: inline-block
@@ -31,5 +38,9 @@
 
   .icon-share
     display: block
-    height: 50px
-    width: 50px
+    height: 40px
+    width: 40px
+
+    +grid-media($grid-max)
+      height: 50px
+      width: 50px
