--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,8 +7,8 @@
   <title>{% if page.permalink == '/' %}{{ site.title }}{% else %}{{ page.title }} | {{ site.title }}{% endif %}</title>
 
   {% assign url_base = page.url | replace:'/',' ' | truncatewords: 1,"" %}
-  <meta name="description" content="{% if site.data.seo.[url_base].description %}{{ site.data.seo.[url_base].description }}{% endif %}">
-  <meta name="keywords" content="{% if site.data.seo.[url_base].keywords %}{{ site.data.seo.[url_base].keywords | join: ', ' }}{% endif %}">
+  {% if site.data.seo.[url_base].description %}<meta name="description" content="{{ site.data.seo.[url_base].description }}">{% endif %}
+  {% if site.data.seo.[url_base].keywords %}<meta name="keywords" content="{{ site.data.seo.[url_base].keywords | join: ', ' }}">{% endif %}
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,400i,700,700i">
 
