--- a/_sass/1-config/_variables.sass
+++ b/_sass/1-config/_variables.sass
@@ -34,9 +34,9 @@ $display-line-height:                     1.3
 $base-border:                             1px solid #e1e1e1
 $base-border-radius:                      4px
 
-$base-box-shadow:                         1px 1px 2px rgba(0,37,55,.1)
-$negative-box-shadow:                     -1px -1px 2px rgba(0,37,55,.1)
-$hover-box-shadow:                        3px 3px 2px rgba(0,37,55,.1)
+$base-box-shadow:                         0 2px 7px rgba(0,0,0,.15)
+$negative-box-shadow:                     0 -2px 7px rgba(0,0,0,.15)
+$hover-box-shadow:                        0 2px 7px 1px rgba(0,0,0,.15)
 $base-text-shadow:                        0 1px 3px rgba(50,50,50,.4)
 
 $base-transition:                         .2s ease-out
