--- a/_sass/2-components/_buttons.sass
+++ b/_sass/2-components/_buttons.sass
@@ -2,6 +2,7 @@
   outline: 0
   border: 0
   border-radius: 0
+  box-shadow: $base-box-shadow
   padding: 9px 24px 7px
   margin: 0
   transition: background-color 0.125s ease-in
@@ -15,6 +16,7 @@
 
   &:hover
     color: $white
+    box-shadow: $hover-box-shadow
 
   &--beyond
     background-color: $beyond-green
