--- a/_sass/2-components/_cards.sass
+++ b/_sass/2-components/_cards.sass
@@ -2,17 +2,24 @@ $widths: 5,10,15,20,25,30,35,40,45,50,100
 
 .card
   background: $card-background-color
-  border: $card-border
   border-radius: $card-border-radius
   box-shadow: $card-box-shadow
 
   &--markdown
+    overflow: hidden
 
     h1, h2, h3, h4, h5, h6
       margin: 4rem $card-margin-mobile 2rem
 
       +grid-media($grid-medium)
         margin: 4rem $card-margin-desktop 2rem
+
+        &:last-of-type
+        margin-bottom: $card-margin-mobile
+
+        +grid-media($grid-medium)
+
+          margin-bottom: $card-margin-desktop
 
     p, ul, ol, table
       margin: 2rem $card-margin-mobile
