--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
 
   <title>{% if page.permalink == '/' %}{{ site.title }}{% else %}{{ page.title }} | {{ site.title }}{% endif %}</title>
 
-  {% assign url_base = page.url | replace:'/',' ' | truncatewords: 1,"" %}
+  {% capture url_base %}{{ page.url | split: '/' | second }}{% endcapture %}
   {% if site.data.seo.[url_base].description %}<meta name="description" content="{{ site.data.seo.[url_base].description }}">{% endif %}
   {% if site.data.seo.[url_base].keywords %}<meta name="keywords" content="{{ site.data.seo.[url_base].keywords | join: ', ' }}">{% endif %}
 
